--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	</header>
 
 	<nav class="navigation-bar">
-    		<a href="products.html">PRODUCTS </a>
+    		<a href="products">PRODUCTS </a>
     		<a href="#blog"> BLOG </a>
-    		<a href="contact.html"> CONTACT</a>
+    		<a href="contact"> CONTACT</a>
   	</nav>
 
   	<main>
