--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<nav class="navigation-bar">
-    		<a href="products.html">PRODUCTS </a>
+    		<a href="product.html">PRODUCTS </a>
     		<a href="http://www.blogger.com"> BLOG </a>
     		<a href="contact.html"> CONTACT</a>
   	</nav>
