update contact & product

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 	</header>
 
 	<nav class="navigation-bar">
-    		<a href="#products">HOME </a>
-    		<a href="#blog"> PRODUCT </a>
-    		<a href="#contact"> BLOG</a>
+    		<a href="index.html">HOME </a>
+    		<a href="product.html"> PRODUCT </a>
+    		<a href="http://www.blogger.com"> BLOG</a>
   	</nav>
 
 	<main>
