--- a/product.html
+++ b/product.html
@@ -17,9 +17,9 @@
 	</header>
 
 	<nav class="navigation-bar">
-    		<a href="#products">HOME </a>
-    		<a href="#blog"> BLOG </a>
-    		<a href="#contact"> CONTACT</a>
+    		<a href="index.html">HOME </a>
+    		<a href="http://www.blogger.com"> BLOG </a>
+    		<a href="contact.html"> CONTACT</a>
   	</nav>
 
 	<main>
